# viRust-splicing

./: .gitignore  .lintr  Cargo.toml  Readme.md  changelog.md  docker-compose.yml  output.tsv
.github/workflows/: release.yml
benches/: my_benchmark.rs
data/: splice_form_config.toml  splice_forms_mock_ratio.csv
etc/: proviral_silencing.md
scripts/R/: check_env.R  summarize_data.R
scripts/quarto/: multi_report.qmd  report.qmd
sim_data/: mockseq_r1.fasta  mockseq_r2.fasta
src/: README.md  config.rs  io.rs  joined_umi_sequence.rs  lib.rs  main.rs  modify_splice_event_search.rs  multi_report_config.rs  ref_sequence.rs  runner.rs  sequence_filter.rs  splice_events.rs  umi.rs
tests/: nl43.fasta
tests/multi_report/test_input/d15/: output_strain_nl43_distance_1_assay_random-reverse_summary.csv
tests/multi_report/test_output/: d3_summary.csv  multi_report.rmarkdown  nl43_summary.csv  run_features.csv  spliceforms_short.csv
tests/quarto/: cascade_data.csv  output_summary.csv  quarto_params.json  report.html  report.qmd  spliceforms_short.csv
