[package]
name = "virust-splicing"
version = "0.2.0"
edition = "2024"
default-run = "virust-splicing"

exclude = [
    "sample_data/*",
]

[dependencies]
bio = "3.0.0"
colored = "3"
serde = "1.0.228"
serde_json = "1.0.145"
tap = "1"
config = "0.15.18"
rayon = "1.11"
itertools = "0.14"
csv = "1.3"
rand = "0.9.2"
rand_chacha = "0.9"
rand_distr = "0.5"
plotters = "0.3"
regex = "1.11.3"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.4"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "mockdata"
path = "src/bin/mockdata/main.rs"

[[bin]]
name = "multi_report"
path = "src/bin/multi_report/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
