[package]
name = "virust-splicing"
version = "0.2.1"
edition = "2024"
default-run = "virust-splicing"

exclude = [
    "sample_data/**",
    "tests/**",
]
keywords = ["HIV", "splicing", "NGS", "bioinformatics", "virology"]
description = "High-performance command-line program for analyzing HIV-1 splicing patterns from NGS data."
authors = ["Shuntai Zhou <shuntai.zhou@gmail.com>", "Michael Clark <clarkmu@gmail.com>"]

license = "MIT"
repository = "https://github.com/ViralSeq/viRust-splicing"

[dependencies]
bio = "3.0.0"
colored = "3"
serde = "1.0.228"
serde_json = "1.0.145"
tap = "1"
config = "0.15.18"
rayon = "1.11"
itertools = "0.14"
csv = "1.3"
rand = "0.9.2"
rand_chacha = "0.9"
rand_distr = "0.5"
plotters = "0.3"
regex = "1.12.2"
clap = { version = "4.5.49", features = ["derive"] }
flate2 = "1.1.4"
getset = "0.1.6"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "mockdata"
path = "src/bin/mockdata/main.rs"

[[bin]]
name = "multi_report"
path = "src/bin/multi_report/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true



