[package]
name = "virust-splicing"
version = "0.3.0"
edition = "2024"
default-run = "virust-splicing"

exclude = [
    "sample_data/**",
    "tests/**",
]
keywords = ["HIV", "splicing", "NGS", "bioinformatics", "virology"]
description = "High-performance command-line program for analyzing HIV-1 splicing patterns from NGS data."
authors = ["Shuntai Zhou <shuntai.zhou@gmail.com>", "Michael Clark <clarkmu@gmail.com>"]

license = "MIT"
repository = "https://github.com/ViralSeq/viRust-splicing"

[dependencies]
bio = "4.0.1"
colored = "3"
serde = "1.0.229"
serde_json = "1.0.151"
tap = "1"
config = "0.15.25"
rayon = "1.12"
itertools = "0.15.0"
csv = "1.4.0"
rand = "0.10.2"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
plotters = "0.3"
regex = "1.13.1"
clap = { version = "4.6.3", features = ["derive"] }
flate2 = "1.1.9"
getset = "0.1.7"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "mockdata"
path = "src/bin/mockdata/main.rs"

[[bin]]
name = "multi_report"
path = "src/bin/multi_report/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true



